fluxcd/infrastructure/services/overlays/production/phase-04-platform/unifi/statefulset-app-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
    spec:
      containers:
        - name: unifi-app
          image: docker.io/linuxserver/unifi-network-application:10.6.106
          volumeMounts:
            - name: tls-cert
              mountPath: /tls
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - SETUID
                - SETGID
                - CHOWN
                - DAC_OVERRIDE
                - FOWNER
      volumes:
        - name: tls-cert
          secret:
            secretName: unifi-pcfae-com-tls
  volumeClaimTemplates:
    - metadata:
        name: zeldas-lullaby-unifi-config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd-retain
        resources:
          requests:
            storage: 256Mi
