fluxcd/infrastructure/services/overlays/production/phase-04-platform/unifi/statefulset-db-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi-db
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: cr-pcfae-admin-pull-secret
      containers:
        - name: mongo
          image: docker.io/library/mongo:7.0.43
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
  volumeClaimTemplates:
    - metadata:
        name: zeldas-lullaby-unifi-mongodb
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd-retain
        resources:
          requests:
            storage: 1Gi
