fluxcd/infrastructure/services/overlays/production/phase-04-platform/unifi/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-app
  annotations:
    lbipam.cilium.io/ips: "172.22.30.20"
    lbipam.cilium.io/sharing-key: "gerudo-crest"
spec:
  type: LoadBalancer
  ports:
    - name: stun
      port: 3478
      targetPort: 3478
      protocol: UDP
    - name: discovery
      port: 10001
      targetPort: 10001
      protocol: UDP
    - name: http-portal
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: upnp
      port: 1900
      targetPort: 1900
      protocol: UDP
    - name: https-portal
      port: 8843
      targetPort: 8843
      protocol: TCP
    - name: http-redir
      port: 8880
      targetPort: 8880
      protocol: TCP
    - name: syslog
      port: 5514
      targetPort: 5514
      protocol: UDP
