fluxcd/infrastructure/services/overlays/production/phase-04-platform/unifi/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: unifi-app-tls
spec:
  host: unifi-app.zeldas-lullaby.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8443
        tls:
          mode: SIMPLE
