fluxcd/infrastructure/services/overlays/production/phase-04-platform/unifi/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Administration (Zelda's Lullaby🎵)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "unifi.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: unifi-app
          port: 8443
